Fixed z-index issue on welcome

--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -2,7 +2,7 @@
     background: #272727 url('/images/homepage-bg.jpg') top center no-repeat;
     background-size: cover;
     #search {
-        z-index: 12;
+        z-index: 1;
         position: relative;
         .search-box {
             position: relative;
